fix: align center img section: Our character

--- a/src/page/Home/OurCharacter/mobile.scss
+++ b/src/page/Home/OurCharacter/mobile.scss
@@ -19,8 +19,11 @@
           }
         }
       }
+      .vector{
+        top: -44%;
+      }
       .Charmande__img {
-        margin-top: -30% !important;
+        margin-top: -48% !important;
       }
     }
     .Ourcharacter_description {
